<resources>
    <string name="app_name">NutriVisionApp</string>
    <string name="app_logo">App Logo</string>
    <string name="text_view_log_in_to_your_account">Log In to your Account</string>
    <string name="edit_text_username">Username</string>
    <string name="edit_text_password">Password</string>
    <string name="button_sign_in">Sign In</string>
    <string name="text_view_don_t_have_an_account">Don\'t have an account?</string>
    <string name="text_view_sign_up">Sign Up</string>
    <string name="text_view_sign_in">Sign In\n</string>
    <string name="text_view_already_have_an_account">Already have an account ?\n</string>
    <string name="text_view_create_your_account">Create your Account\n</string>
    <string name="edit_text_email">Email\n</string>
    <string name="edit_text_confirm_password">Confirm Password\n</string>
    <string name="button_sign_up">Sign Up</string>
    <string name="openai_api_key">YOUR_API_KEY_HERE</string>
    <string name="detect_food">Detect Food</string>
    <string name="recipe_assistant">Recipe Assistant</string>
    <string name="my_food_journal">My Food Journal</string>
    <string name="my_recipes">My Recipes</string>
    <string name="call_doctor">Call Doctor</string>
    <string name="text_doctor">Text Doctor</string>
    <string name="mark_date">Mark Date</string>
    <string name="hi_i_m_your_nutritional_assistant">Hi! I\'m your Nutritional Assistant</string>
    <string name="i_can_help_you_find_recipes_based_on_your_preferences_and_analyze_their_nutritional_value_try_asking_me_something_like">I can help you find recipes based on your preferences and analyze their nutritional value. Try asking me something like:</string>
    <string name="show_me_low_carb_dinner_recipes">Show me low-carb dinner recipes</string>
    <string name="what_can_i_cook_with_chicken_and_vegetables">What can I cook with chicken and vegetables?</string>
    <string name="find_me_a_healthy_breakfast_recipe">Find me a healthy breakfast recipe</string>
    <string name="ask_for_recipe_suggestions">Ask for recipe suggestions...</string>
    <string name="food_journal">Food Journal</string>
</resources>